--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
  <DT><A HREF="http://www.1234i.com/">ip</A>
  <DT><A HREF="https://www.ip138.com/">ip0</A>
  <DT><A HREF="https://www.123pan.com/s/D4wuVv-02SLH.html">zcloud</A>
-<DT><A HREF="https://ln5.sync.com/dl/b554cd3a0/sibtsf4e-hs4gevm3-uux4fs7e-twd7dbrj">ice_</A>
- <DT><A HREF="https://www.123pan.com/s/D4wuVv-ViSLH">ice</A>
- <DT><A HREF="https://www.123pan.com/s/D4wuVv-l7SLH.html">fox</A> 
- <DT><A HREF="https://wwax.lanzouw.com/i9bWM1jfp5xe">fox密码:cois</A>
+<DT><A HREF="https://ln5.sync.com/dl/909a3a000/ckyxesid-xc98bjfj-vm5wu3s3-e6zmd52j">ice_</A>
+ <DT><A HREF="https://www.123pan.com/s/D4wuVv-BxlLH">ice</A>
+ <DT><A HREF="https://www.123pan.com/s/D4wuVv-axlLH.html">fox</A> 
+ <DT><A HREF="https://wwax.lanzouw.com/imDuQ1o6xlhi">fox密码:cyz2</A>
  <DT><A HREF="https://pic2.imgdb.cn/item/6459f64e0d2dde5777fd1a24.jpg">排面0505 20:24</A>
  <DT><A HREF="https://pic.imgdb.cn/item/64d8f7a51ddac507ccab2d99.png">排面0728 12:36</A>
  <DT><A HREF="https://www.123pan.com/s/D4wuVv-u7SLH.html">0505</A>
  <DT><A HREF="https://www.123pan.com/s/D4wuVv-K7SLH.html">0728</A>
- <DT><A HREF="https://www.123pan.com/s/D4wuVv-yiSLH.html">yhdos</A>
+ <DT><A HREF="https://www.123pan.com/s/D4wuVv-fxlLH.html">yhdos</A>
  <DT><A HREF="https://files.catbox.moe/60ffal.zip">白云山</A>
 <DT><A HREF="https://github.com/fork-maintainers/iceraven-browser/releases">ice0</A>
 <DT><A HREF="https://github.com/mozilla-mobile/firefox-android/releases">fox0</A>
