--- a/index.html
+++ b/index.html
@@ -96,25 +96,25 @@
 
 <p></p>
 <DT><A HREF="https://www.mediafire.com/file/tlhu1ynluky2ult/230709scr.rar/file">scr</A>
-<DT><A HREF="https://files.catbox.moe/ab4ibk.rar">scr_shaygeo1</A>
-<DT><A HREF="https://files.catbox.moe/bjnf0n.rar">scr_shaygeo2</A>
-<DT><A HREF="https://files.catbox.moe/8xag2d.rar">scr_solang,mia,serena,candy,rosali</A>
-<DT><A HREF="https://files.catbox.moe/18ln2y.rar">caro,petite</A>
-<DT><A HREF="https://files.catbox.moe/4uw3fr.rar">Danniela_</A>
-<DT><A HREF="https://files.catbox.moe/7lyfcy.rar">s vera,rita,dzhili</A>
-<DT><A HREF="https://files.catbox.moe/o78vaq.rar">lorenalust,jennifer</A>
+<DT><A HREF="https://frdl.to/hf0wpytzvh9y/scr_shaygeo1.rar">scr_shaygeo1</A>
+<DT><A HREF="https://frdl.to/srfx35s5q24i/scr_shaygeo2.rar">scr_shaygeo2</A>
+<DT><A HREF="https://frdl.to/ldu8pslfqnae/scr_solang%2Cmia%2Cserena%2Ccandy%2Crosali.rar">scr_solang,mia,serena,candy,rosali</A>
+<DT><A HREF="https://frdl.to/5htn1fbjark0/caro%2Cpetite.rar">caro,petite</A>
+<DT><A HREF="https://frdl.to/v5qgz14gg7fl/Danniela_.rar">Danniela_</A>
+<DT><A HREF="https://frdl.to/tpd7dyknwqog/s+vera%2Crita%2Cdzhili.rar">s vera,rita,dzhili</A>
+<DT><A HREF="https://frdl.to/9525wgn04bgw/lorenalust%2Cjennifer.rar">lorenalust,jennifer</A>
 
 <DT><A HREF="https://www.feijix.com/s/8inCFLZ">l1</A>
 <DT><A HREF="https://www.feijix.com/s/einCUn9">l2</A>
 <DT><A HREF="https://www.feijix.com/s/MBnCbsP">fran a,innes,elisa l,adele s</A>
-
-<DT><A HREF="https://files.catbox.moe/28opdz.rar">Bella O, Sheela A_</A>
-<DT><A HREF="https://files.catbox.moe/me79sw.rar">siam,elize</A>
-<DT><A HREF="https://files.catbox.moe/4j4uco.rar">Caralyn, Beau D</A>
-<DT><A HREF="https://files.catbox.moe/qu8yuu.rar">charl,nalina</A>
-<DT><A HREF="https://files.catbox.moe/mvtl7r.rar">Eilona,eidis</A>
-<DT><A HREF="https://files.catbox.moe/vi033e.rar">Polly Pure_</A>
-<DT><A HREF="https://files.catbox.moe/z3oao1.rar">Yassa</A>
+<DT><A HREF="https://frdl.to/qgaulguc6shq/NIKOLETA.rar.html">nikoleta_</A>
+<DT><A HREF="https://frdl.to/x6elbyjzqr6i/Bella+O%2C+Sheela+A_.rar">Bella O, Sheela A_</A>
+<DT><A HREF="https://frdl.to/ym7np7vr5lvf/siam,elize.rar.html">siam,elize</A>
+<DT><A HREF="https://frdl.to/dr2cocofeeok/Caralyn,_Beau_D.rar.html">Caralyn, Beau D</A>
+<DT><A HREF="https://frdl.to/l59cx755k63j/charl,nalina.rar.html">charl,nalina</A>
+<DT><A HREF="https://frdl.to/ljsqnk9xrazw/Eilona,eidis.rar.html">Eilona,eidis</A>
+<DT><A HREF="https://frdl.to/qjqi6n98gp8j/Polly_Pure_.rar.html">Polly Pure_</A>
+<DT><A HREF="https://frdl.to/jh2b4ua7lch5/Yassa.rar.html">Yassa</A>
 <DT><A HREF="https://www.mediafire.com/file/fhsh8c2s4cjmnwi/Orabelle+Koivu.rar/file">Orabelle K</A>
 <DT><A HREF="https://www.mediafire.com/file/0hrcsmstyio3p96/Estelle.rar/file">Estelle</A>
 <DT><A HREF="https://www.feijix.com/s/LhUCq9Ow">nadin, anatali</A>
