--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
  <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/record/panel?codeId=167921">🐂</A>
  <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/record/panel?codeId=250294">b16</A> 
  <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/record/panel?codeId=250297">b15</A>
+ <p></p> 
+ <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/record/panel?codeId=300428">b鱼</A>
 <p></p> 
  <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=64080">w8</A>
  <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=64079">w9</A>
