--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
  <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/record/panel?codeId=250294">b16</A> 
  <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/record/panel?codeId=250297">b15</A>
  <p></p> 
+  <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300593">w0</A>
+<DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300592">w1</A>
+<DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300591">w2</A>
+<DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300590">w3</A>
+<DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300589">w4</A>
+<DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300588">w5</A>
+<DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300587">w6</A>
  <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/record/panel?codeId=300428">b鱼</A>
 <p></p> 
  <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=64080">w8</A>
