--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 <DT><A HREF="https://www.mediafire.com/file/o81zya0gxvhetfz/P.zip/file">ps_me</A>
 <DT><A HREF="https://drop.download/c53t0iapkkvb">bt_dr</A>
 <DT><A HREF="https://www.mediafire.com/file/dyrh0734dax4w17/bitcomet_v2.0.1.apk/file">bt_me</A>
-<DT><A HREF="https://files.catbox.moe/t1ra4s.ex">sr</A>
 <DT><A HREF="https://cp.sync.com/">sync</A>
 
 <p></p> 
@@ -99,6 +98,7 @@
 <DT><A HREF="https://www.feijix.com/s/8inCFLZ">l1</A>
 <DT><A HREF="https://www.feijix.com/s/einCUn9">l2</A>
 <DT><A HREF="https://www.feijix.com/s/MBnCbsP">fran a,innes,elisa l,adele s</A>
+<DT><A HREF="https://frdl.to/8zdss5sbnk09/Priscilla_Vittoria_Ama.rar.html">Vittoria_Ama</A>
 <DT><A HREF="https://frdl.to/qgaulguc6shq/NIKOLETA.rar.html">nikoleta_</A>
 <DT><A HREF="https://frdl.to/x6elbyjzqr6i/Bella+O%2C+Sheela+A_.rar">Bella O, Sheela A_</A>
 <DT><A HREF="https://frdl.to/ym7np7vr5lvf/siam,elize.rar.html">siam,elize</A>
