--- a/index.html
+++ b/index.html
@@ -87,20 +87,33 @@
 
 <p></p>
 <DT><A HREF="https://www.mediafire.com/file/tlhu1ynluky2ult/230709scr.rar/file">scr</A>
-<DT><A HREF="https://frdl.to/hf0wpytzvh9y/scr_shaygeo1.rar">scr_shaygeo1</A>
-<DT><A HREF="https://frdl.to/srfx35s5q24i/scr_shaygeo2.rar">scr_shaygeo2</A>
-<DT><A HREF="https://frdl.to/ldu8pslfqnae/scr_solang%2Cmia%2Cserena%2Ccandy%2Crosali.rar">scr_solang,mia,serena,candy,rosali</A>
-<DT><A HREF="https://frdl.to/5htn1fbjark0/caro%2Cpetite.rar">caro,petite</A>
-<DT><A HREF="https://frdl.to/v5qgz14gg7fl/Danniela_.rar">Danniela_</A>
-<DT><A HREF="https://frdl.to/tpd7dyknwqog/s+vera%2Crita%2Cdzhili.rar">s vera,rita,dzhili</A>
-<DT><A HREF="https://frdl.to/9525wgn04bgw/lorenalust%2Cjennifer.rar">lorenalust,jennifer</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-udbLH.html">Blondi, Lorna A</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-edbLH.html">scr_shay,geor.part1.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-tdbLH.html">scr_shay,geor.part2.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-idbLH.html">scr_shay,geor.part3.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-zdbLH.html">NIKOLETA.part1.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-LdbLH.html">NIKOLETA.part2.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-5dbLH.html">Priscilla Vittoria Ama1.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-qdbLH.html">Priscilla Vittoria Ama2.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-6dbLH.html">Priscilla Vittoria Ama3.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-ydbLH.html">jy1.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-VdbLH.html">jy3.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-jdbLH.html">jy2.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-T3bLH.html">jy5.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-v3bLH.html">jy4.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-d3bLH.html">jy7.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-33bLH.html">jy6.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-h3bLH.html">jy10.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-H3bLH.html">jy9.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-A3bLH.html">jy8.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-93bLH.html">jy12.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-Q3bLH.html">jy11.rar</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-E3bLH.html">jy13.rar</A>
 
 <DT><A HREF="https://www.feijix.com/s/8inCFLZ">l1</A>
 <DT><A HREF="https://www.feijix.com/s/einCUn9">l2</A>
 <DT><A HREF="https://www.feijix.com/s/MBnCbsP">fran a,innes,elisa l,adele s</A>
-<DT><A HREF="https://frdl.to/8zdss5sbnk09/Priscilla_Vittoria_Ama.rar.html">Vittoria_Ama</A>
-<DT><A HREF="https://frdl.to/qgaulguc6shq/NIKOLETA.rar.html">nikoleta_</A>
-<DT><A HREF="https://frdl.to/x6elbyjzqr6i/Bella+O%2C+Sheela+A_.rar">Bella O, Sheela A_</A>
+
 <DT><A HREF="https://frdl.to/ym7np7vr5lvf/siam,elize.rar.html">siam,elize</A>
 <DT><A HREF="https://frdl.to/dr2cocofeeok/Caralyn,_Beau_D.rar.html">Caralyn, Beau D</A>
 <DT><A HREF="https://frdl.to/l59cx755k63j/charl,nalina.rar.html">charl,nalina</A>
