--- a/index.html
+++ b/index.html
@@ -114,12 +114,29 @@
 <DT><A HREF="https://www.feijix.com/s/einCUn9">l2</A>
 <DT><A HREF="https://www.feijix.com/s/MBnCbsP">fran a,innes,elisa l,adele s</A>
 
-<DT><A HREF="https://frdl.to/ym7np7vr5lvf/siam,elize.rar.html">siam,elize</A>
-<DT><A HREF="https://frdl.to/dr2cocofeeok/Caralyn,_Beau_D.rar.html">Caralyn, Beau D</A>
-<DT><A HREF="https://frdl.to/l59cx755k63j/charl,nalina.rar.html">charl,nalina</A>
-<DT><A HREF="https://frdl.to/ljsqnk9xrazw/Eilona,eidis.rar.html">Eilona,eidis</A>
-<DT><A HREF="https://frdl.to/qjqi6n98gp8j/Polly_Pure_.rar.html">Polly Pure_</A>
-<DT><A HREF="https://frdl.to/jh2b4ua7lch5/Yassa.rar.html">Yassa</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-m3bLH.html">Bella O2</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-13bLH.html">Bella O1</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-43bLH.html">scr_solang,mia,serena,candy,rosali, danniela.part2</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-x3bLH.html">scr_solang,mia,serena,candy,rosali, danniela.part3</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-p3bLH.html">scr_solang,mia,serena,candy,rosali, danniela.part1</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-f3bLH.html">yassa2</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-a3bLH.html">yassa1</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-B3bLH.html">carolinasampaio,pollypure.part3</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-J3bLH.html">carolinasampaio,pollypure.part1</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-I3bLH.html">carolinasampaio,pollypure.part2</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-M3bLH.html">jennifer,lorenalust.part2</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-w3bLH.html">jennifer,lorenalust.part1</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-g3bLH.html">charlize,caralyn.part2</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-F3bLH.html">charlize,caralyn.part3</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-Y3bLH.html">charlize,caralyn.part1</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-G3bLH.html">alinapet,elize.part2</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-P3bLH.html">alinapet,elize.part1</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-X3bLH.html">eidis, nicol</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-n3bLH.html">Eilona</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-23bLH.html">Sofia Vera</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-s3bLH.html">nalina</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-W3bLH.html">rita (angel)</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-C3bLH.html">siam,dzhi</A>
 <DT><A HREF="https://www.mediafire.com/file/fhsh8c2s4cjmnwi/Orabelle+Koivu.rar/file">Orabelle K</A>
 <DT><A HREF="https://www.mediafire.com/file/0hrcsmstyio3p96/Estelle.rar/file">Estelle</A>
 <DT><A HREF="https://www.feijix.com/s/LhUCq9Ow">nadin, anatali</A>
