--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300587">w6</A>
  <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/record/panel?codeId=300428">b鱼</A>
 <p></p> 
+   <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300724">wr 1hsc</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300629">wr1</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300630">wr2</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300631">wr3</A>
