--- a/index.html
+++ b/index.html
@@ -105,3 +105,5 @@
 <DT><A HREF="https://www.feijix.com/s/g6UUVkxF">lenore</A>
 <DT><A HREF="https://share.feijipan.com/s/7rUxHkFo">Emily Cutie, Isabella Star, Isabelle (Star)</A>
 <DT><A HREF="https://share.feijipan.com/s/RJUxHslS">leila, Arina, Fannie, Leila A</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-hKbLH">Kennedy, kitty red</A>
+<DT><A HREF="https://www.123pan.com/s/D4wuVv-HKbLH">Eva Y</A>
