--- a/index.html
+++ b/index.html
@@ -112,6 +112,5 @@
 <DT><A HREF="https://kdocs.cn/l/cbH6xjd9OiiO">Kathy Through, Katy Zachry</A>
 <p></p>
 <DT><A HREF="https://kdocs.cn/l/cqiih0cT7xSk">Alessa Z, Izabel A, Liza2</A>
-<DT><A HREF="https://kdocs.cn/l/ciCcSLtq7pOz">Georgia, Polina Kadynskaya, Susza K, Viva02</A>
-<DT><A HREF="https://kdocs.cn/l/clNp9fryc36v">Nude in Russia.part1</A>
-<DT><A HREF="https://kdocs.cn/l/cftZHhCh5Tc5">Nude in Russia.part2</A>
+<DT><A HREF="https://kdocs.cn/l/ccTx68I7mZA3">Polly Pure_</A>
+<DT><A HREF="https://kdocs.cn/l/cqiY2DybRRBK">lilu rose_</A>
