--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
  <DT><A HREF="https://pic.imgdb.cn/item/64d8f7a51ddac507ccab2d99.png">排面0728 12:36</A>
  <DT><A HREF="https://www.123pan.com/s/D4wuVv-u7SLH.html">0505</A>
  <DT><A HREF="https://www.123pan.com/s/D4wuVv-K7SLH.html">0728</A>
- <DT><A HREF="https://www.123pan.com/s/D4wuVv-arbLH">yhdos</A>
+ <DT><A HREF="https://www.123pan.com/s/D4wuVv-x5ZLH">yhdos</A>
  <DT><A HREF="https://files.catbox.moe/60ffal.zip">白云山</A>
 <DT><A HREF="https://github.com/fork-maintainers/iceraven-browser/releases">ice0</A>
 <DT><A HREF="https://github.com/mozilla-mobile/firefox-android/releases">fox0</A>
