--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300638">wr10</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300639">wr11</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300640">wr12</A>
-   <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300641">wr13</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300642">wr14</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300643">wr15</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300644">wr16</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300645">wr17</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300646">wr18</A>
-   <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300647">wr19</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300648">wr20</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300649">wr21</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300650">wr22</A>
@@ -116,3 +114,4 @@
 <DT><A HREF="https://kdocs.cn/l/cqiY2DybRRBK">lilu rose_</A>
 <DT><A HREF="https://qiwi.gg/file/6zpf3426-AmeliaGinKaterynaKira">Amelia (Gin), Kateryna, Kira</A>  
 <DT><A HREF="https://qiwi.gg/file/1zU74346-SophieLix">Sophie Lix</A>
+<DT><A HREF="https://qiwi.gg/file/mMmh7710-LanaBroksHelana">Lana Broks, Helana</A>
