--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
  <DT><A HREF="https://www.ip138.com/">ip0</A>
  <DT><A HREF="https://www.123pan.com/s/D4wuVv-3VbLH.html">zcloud</A>
 <DT><A HREF="https://ln5.sync.com/dl/74707ca30/qysg9fib-mxuzypbf-h7sauia9-beay6wyx">ice_</A>
- <DT><A HREF="https://www.123pan.com/s/D4wuVv-prbLH">ice</A>
- <DT><A HREF="https://www.123pan.com/s/D4wuVv-be7LH.html">fox</A> 
- <DT><A HREF="https://wwax.lanzouw.com/ib6WU22mobqd">fox密码:b33s</A>
+<DT><A HREF="https://gofile.io/d/HwImiA">ice+fox</A>
+ <DT><A HREF="https://www.123684.com/s/D4wuVv-tgeLH">ice</A>
+ <DT><A HREF="https://www.123684.com/s/D4wuVv-igeLH">fox</A> 
  <DT><A HREF="https://pic.imgdb.cn/item/65d331aa9f345e8d03d05d57.jpg">排班</A>
  <DT><A HREF="https://pic.imgdb.cn/item/65d331ab9f345e8d03d05dfb.jpg">站岗</A>
  <DT><A HREF="https://pic2.imgdb.cn/item/6459f64e0d2dde5777fd1a24.jpg">排面0505 20:24</A>
@@ -48,14 +48,14 @@
  <DT><A HREF="https://www.123pan.com/s/D4wuVv-hfcLH">yhdos</A>
  <DT><A HREF="https://files.catbox.moe/60ffal.zip">白云山</A>
 <DT><A HREF="https://github.com/fork-maintainers/iceraven-browser/releases">ice0</A>
+ <DT><A HREF="https://ftp.mozilla.org/pub/fenix/releases/">fox</A>
 <DT><A HREF="https://github.com/mozilla-mobile/firefox-android/releases">fox0</A>
 
-<DT><A HREF="https://drop.download/o0ockuru04fu">rar_dr</A>
+<DT><A HREF="https://wwax.lanzn.com/iP9pz2ocf2pg">rar_密码:etth</A>
 <DT><A HREF="https://www.mediafire.com/file/3o0qs8vnh5lw8qk/rar-android-620.113.apk/file">rar_me</A>
 
 <DT><A HREF="https://ln5.sync.com/dl/5203b1ab0/zc7dniav-mx5muvrh-zux8hc8n-qxxu3y2f">ps_syn</A>
 <DT><A HREF="https://www.mediafire.com/file/o81zya0gxvhetfz/P.zip/file">ps_me</A>
-<DT><A HREF="https://drop.download/c53t0iapkkvb">bt_dr</A>
 <DT><A HREF="https://www.mediafire.com/file/dyrh0734dax4w17/bitcomet_v2.0.1.apk/file">bt_me</A>
 <DT><A HREF="https://cp.sync.com/">sync</A>
 
