--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=322248">w6</A>
 <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/record/panel?codeId=300428">b鱼</A>
 <p></p> 
+   <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300586">wr蛋</A>
+   <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300582">wr蔬果</A>
+   <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300583">wr蔬果</A>
+   <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300585">wr蔬果</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=319031">wr蔬果</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=319032">wr肉禽</A>
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300629">wr1</A>
