--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=322247">w4</A>
 <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300588">w5</A>
 <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=322248">w6</A>
+<DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=294063">w7</A>
+<DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=294064">w8</A>
 <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/record/panel?codeId=300428">b鱼</A>
 <p></p> 
    <DT><A HREF="http://foodsafety.yonghui.cn/foodsafety_frontend.html#/standing/temper/panel?codeId=300586">wr蛋</A>
