--- a/index.html
+++ b/index.html
@@ -117,4 +117,4 @@
 <DT><A HREF="https://kdocs.cn/l/ccTx68I7mZA3">Polly Pure_</A>
 <DT><A HREF="https://kdocs.cn/l/cqiY2DybRRBK">lilu rose_</A>
 <DT><A HREF="https://qiwi.gg/file/6zpf3426-AmeliaGinKaterynaKira">Amelia (Gin), Kateryna, Kira</A>  
-<DT><A HREF="https://www.123684.com/s/D4wuVv-EKtLH">lety star</A>
+<DT><A HREF="https://wwax.lanzouu.com/iIGWU2yo835c">lety star</A>
