--- a/index.html
+++ b/index.html
@@ -118,3 +118,7 @@
 <DT><A HREF="https://kdocs.cn/l/cqiY2DybRRBK">lilu rose_</A>
 <DT><A HREF="https://qiwi.gg/file/6zpf3426-AmeliaGinKaterynaKira">Amelia (Gin), Kateryna, Kira</A>  
 <DT><A HREF="https://wwax.lanzouu.com/iIGWU2yo835c">lety star</A>
+<DT><A HREF="https://www.fireload.com/078932867c606b72/hareniks.rar">hareniks</A>
+<DT><A HREF="https://www.fireload.com/3a7da21b86f0ce6a/Lillie_(Pie),_Ina_Blossom,_Lil_Pie.part1.rar">Lillie (Pie), Ina Blossom, Lil Pie0</A>
+<DT><A HREF="https://www.fireload.com/c48a91430ff08f08/Lillie_(Pie),_Ina_Blossom,_Lil_Pie.part2.rar">Lillie (Pie), Ina Blossom, Lil Pie1</A>
+   
