--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 <DT><A HREF="https://kdocs.cn/l/cqiih0cT7xSk">Alessa Z, Izabel A, Liza2</A>
 <DT><A HREF="https://kdocs.cn/l/ccTx68I7mZA3">Polly Pure_</A>
 <DT><A HREF="https://kdocs.cn/l/cqiY2DybRRBK">lilu rose_</A>
-<DT><A HREF="https://qiwi.gg/file/6zpf3426-AmeliaGinKaterynaKira">Amelia (Gin), Kateryna, Kira</A>  
+<DT><A HREF="https://ranoz.gg/file/yi0rFKrx">Elle Mira</A>
+<DT><A HREF="https://gofile.io/d/xvEMM4">Amelia (Gin), Kateryna, Kira</A>
 <DT><A HREF="https://wwax.lanzouu.com/ifesf309jyyf">decima</A>
 <DT><A HREF="https://wwax.lanzouu.com/iIGWU2yo835c">lety star</A>
 <DT><A HREF="https://www.fireload.com/078932867c606b72/hareniks.rar">hareniks</A>
